# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "192.168.55.42:8080",
+    "host": "192.168.55.42:8000",
     "basePath": "/",
     "paths": {
         "/distances": {
@@ -749,7 +749,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieve a paginated list of all ugurlar",
+                "description": "Retrieve a paginated list of ugurlar filtered by optional query parameters",
                 "consumes": [
                     "application/json"
                 ],
@@ -771,6 +771,54 @@
                         "type": "integer",
                         "description": "Number of items per page (default: 10, max: 100)",
                         "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Departure date in YYYY-MM-DD format",
+                        "name": "date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Departure place ID",
+                        "name": "from_place",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Destination place ID",
+                        "name": "to_place",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Car make name",
+                        "name": "car_make",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Car model name",
+                        "name": "car_model",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Space",
+                        "name": "space",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Rating",
+                        "name": "rating",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Passenger type",
+                        "name": "passenger_type",
                         "in": "query"
                     }
                 ],
